# Intan-RHX

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
Engine/API/Abstract/: abstractrhxcontroller.cpp  abstractrhxcontroller.h
Engine/API/Hardware/: rhxcontroller.cpp  rhxcontroller.h  rhxdatablock.cpp  rhxdatablock.h  rhxregisters.cpp  rhxregisters.h
Engine/API/Synthetic/: playbackrhxcontroller.cpp  playbackrhxcontroller.h  synthdatablockgenerator.cpp  synthdatablockgenerator.h  syntheticrhxcontroller.cpp  syntheticrhxcontroller.h
Engine/Processing/: channel.cpp  channel.h  commandparser.cpp  controllerinterface.cpp  controllerinterface.h  datastreamfifo.cpp  displayundomanager.h  fastfouriertransform.cpp  filter.cpp  filter.h  impedancereader.cpp  impedancereader.h  matfilewriter.cpp  matfilewriter.h  minmax.h  rhxdatareader.cpp  signalsources.cpp  signalsources.h  softwarereferenceprocessor.cpp  softwarereferenceprocessor.h  stateitem.cpp  stateitem.h  stimparameters.h  systemstate.cpp  systemstate.h  waveformfifo.cpp  waveformfifo.h  xmlinterface.cpp  xmlinterface.h
Engine/Processing/DataFileReaders/: datafile.cpp  datafile.h  datafilemanager.cpp  datafilemanager.h  datafilereader.cpp  datafilereader.h  fileperchannelmanager.cpp  fileperchannelmanager.h  filepersignaltypemanager.h  traditionalintanfilemanager.cpp  traditionalintanfilemanager.h
Engine/Processing/SaveManagers/: fileperchannelsavemanager.cpp  fileperchannelsavemanager.h  filepersignaltypesavemanager.cpp  intanfilesavemanager.cpp  savefile.cpp  savefile.h  savemanager.cpp  savemanager.h
Engine/Processing/XPUInterfaces/: abstractxpuinterface.cpp  abstractxpuinterface.h  cpuinterface.cpp  gpuinterface.cpp
Engine/Threads/: audiothread.cpp  audiothread.h  savetodiskthread.cpp  savetodiskthread.h  tcpdataoutputthread.cpp  tcpdataoutputthread.h  usbdatathread.cpp  waveformprocessorthread.cpp  waveformprocessorthread.h
GUI/Dialogs/: auxdigoutconfigdialog.cpp  auxdigoutconfigdialog.h  bandwidthdialog.cpp  boardselectdialog.cpp  boardselectdialog.h  cabledelaydialog.cpp  cabledelaydialog.h  referenceselectdialog.cpp  renamechanneldialog.cpp  waveformselectdialog.h
GUI/Widgets/: abstractfigure.cpp  anoutfigure.cpp  controlpanelaudioanalogtab.cpp  controlpanelbandwidthtab.cpp  controlpanelconfiguretab.cpp  controlpanelconfiguretab.h  controlpanelimpedancetab.cpp  digfigure.cpp  displaylistmanager.cpp  displaylistmanager.h  filterdisplayselector.cpp  filterdisplayselector.h  isiplot.cpp  isiplot.h  multicolumndisplay.cpp  multicolumndisplay.h  multiwaveformplot.cpp  multiwaveformplot.h  pageview.cpp  pageview.h  plotutilities.cpp  plotutilities.h  psthplot.cpp  psthplot.h  scrollbar.h  spectrogramplot.cpp  spectrogramplot.h  spikeplot.cpp  spikeplot.h  stimfigure.cpp  tcpdisplay.cpp  waveformdisplaycolumn.h  waveformdisplaymanager.cpp  waveformdisplaymanager.h
GUI/Windows/: controlwindow.cpp  probemapwindow.cpp  probemapwindow.h
